testing/tests/ui/lit_on_assignment_lhs.stderr
error: the previous template error derives from
 --> tests/ui/lit_on_assignment_lhs.rs:5:5
  |
5 |     source = "{%let 7=x%}",
  |     ^^^^^^
